--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -380,6 +380,40 @@
             </objects>
             <point key="canvasLocation" x="905" y="348"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="YqU-ev-aWv">
+            <objects>
+                <viewController id="NyQ-U9-QoJ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tiN-aj-NqQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="75P-4j-5Tk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ykl-Dk-kFB">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9dc-Ga-AH2">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="NyQ-U9-QoJ" id="OlY-5D-NvY"/>
+                                    <outlet property="delegate" destination="NyQ-U9-QoJ" id="LLr-1T-bog"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="9dc-Ga-AH2" secondAttribute="trailing" id="PKZ-m6-5uZ"/>
+                            <constraint firstItem="75P-4j-5Tk" firstAttribute="top" secondItem="9dc-Ga-AH2" secondAttribute="bottom" id="c8m-iN-T5g"/>
+                            <constraint firstItem="9dc-Ga-AH2" firstAttribute="top" secondItem="tiN-aj-NqQ" secondAttribute="bottom" id="hi1-3L-wSG"/>
+                            <constraint firstItem="9dc-Ga-AH2" firstAttribute="leading" secondItem="ykl-Dk-kFB" secondAttribute="leading" id="mNH-Aa-mYq"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FTI-zU-Sqh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1579" y="183"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Bullet Point" width="8" height="8"/>
