--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -231,6 +231,9 @@
                                                                 <exclude reference="lA8-dY-3Rq"/>
                                                             </mask>
                                                         </variation>
+                                                        <connections>
+                                                            <segue destination="NyQ-U9-QoJ" kind="presentation" id="vLT-h3-GsH"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="18q-bc-79v">
                                                         <rect key="frame" x="0.0" y="67" width="560" height="60"/>
@@ -380,10 +383,10 @@
             </objects>
             <point key="canvasLocation" x="905" y="348"/>
         </scene>
-        <!--View Controller-->
+        <!--Question Detail View Controller-->
         <scene sceneID="YqU-ev-aWv">
             <objects>
-                <viewController id="NyQ-U9-QoJ" sceneMemberID="viewController">
+                <viewController id="NyQ-U9-QoJ" customClass="QuestionDetailViewController" customModule="ChachaT" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tiN-aj-NqQ"/>
                         <viewControllerLayoutGuide type="bottom" id="75P-4j-5Tk"/>
@@ -393,7 +396,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9dc-Ga-AH2">
-                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="NyQ-U9-QoJ" id="OlY-5D-NvY"/>
@@ -409,6 +412,9 @@
                             <constraint firstItem="9dc-Ga-AH2" firstAttribute="leading" secondItem="ykl-Dk-kFB" secondAttribute="leading" id="mNH-Aa-mYq"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="theTableView" destination="9dc-Ga-AH2" id="Da0-fk-5mF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FTI-zU-Sqh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
