--- a/ChachaT/Onboarding.storyboard
+++ b/ChachaT/Onboarding.storyboard
@@ -71,6 +71,28 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ttR-IF-qXb">
+                                <rect key="frame" x="63" y="225" width="250" height="46"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="DFc-qx-HnO"/>
+                                    <constraint firstAttribute="height" constant="46" id="kdU-LY-qaT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                <size key="titleShadowOffset" width="2.2250738585072014e-308" height="2.2250738585072014e-308"/>
+                                <state key="normal" title="Sign Up">
+                                    <color key="titleColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="signUp:" destination="11m-Bf-sI4" eventType="touchUpInside" id="aFT-UZ-bUV"/>
+                                </connections>
+                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ChaCha-Logo-White" translatesAutoresizingMaskIntoConstraints="NO" id="toR-dd-ee4">
                                 <rect key="frame" x="117" y="49" width="142" height="88"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -165,28 +187,6 @@
                                     <action selector="changeToLoginScreen:" destination="11m-Bf-sI4" eventType="touchUpInside" id="8EP-aE-Lix"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ttR-IF-qXb">
-                                <rect key="frame" x="63" y="225" width="250" height="46"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="250" id="DFc-qx-HnO"/>
-                                    <constraint firstAttribute="height" constant="46" id="kdU-LY-qaT"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
-                                <size key="titleShadowOffset" width="2.2250738585072014e-308" height="2.2250738585072014e-308"/>
-                                <state key="normal" title="Sign Up">
-                                    <color key="titleColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="10"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="signUp:" destination="11m-Bf-sI4" eventType="touchUpInside" id="aFT-UZ-bUV"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -240,8 +240,8 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="bottomConstraint" destination="D4g-fI-TWd" id="GDe-qm-rcL"/>
                         <outlet property="changeScreenButton" destination="8C8-jf-1mY" id="cDT-bn-QKq"/>
+                        <outlet property="changeScreenButtonBottomConstraint" destination="D4g-fI-TWd" id="lDb-dv-Pfu"/>
                         <outlet property="orLine" destination="S1c-Zr-L0U" id="lvm-wr-p76"/>
                         <outlet property="theCreateAccountLabel" destination="rWv-S8-RVR" id="2iA-BA-xux"/>
                         <outlet property="theEmail" destination="eGv-cO-axN" id="oCf-u4-BtG"/>
@@ -251,7 +251,6 @@
                         <outlet property="theSignUpButton" destination="ttR-IF-qXb" id="4Dg-4Y-PEw"/>
                         <outlet property="theSpinner" destination="b1L-J8-n7A" id="8zZ-Vy-qKq"/>
                         <outlet property="theTermsOfService" destination="B8v-0M-Wvc" id="jZL-mr-HLj"/>
-                        <outlet property="theTextFieldsView" destination="J6X-gB-146" id="Wpj-fg-RRI"/>
                         <outlet property="theTextfieldsView" destination="J6X-gB-146" id="8QR-2w-YsT"/>
                     </connections>
                 </viewController>
