--- a/ChachaT/Onboarding.storyboard
+++ b/ChachaT/Onboarding.storyboard
@@ -50,7 +50,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B8v-0M-Wvc">
-                                <rect key="frame" x="148" y="354" width="78" height="25"/>
+                                <rect key="frame" x="148.5" y="354" width="77" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="K4y-9w-Voh"/>
                                     <constraint firstAttribute="width" constant="78" id="VQM-M5-iLq"/>
@@ -60,6 +60,12 @@
                                     <color key="titleColor" red="0.1333333333" green="0.1960784314" blue="0.44705882349999998" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="VQM-M5-iLq"/>
+                                        <exclude reference="K4y-9w-Voh"/>
+                                    </mask>
+                                </variation>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By creating an account, you accept our " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWv-S8-RVR">
                                 <rect key="frame" x="95" y="349" width="185" height="12"/>
