--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -21,6 +21,14 @@
             </objects>
             <point key="canvasLocation" x="-276" y="366"/>
         </scene>
+        <!--Onboarding-->
+        <scene sceneID="4f1-Gx-aDr">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Onboarding" id="fEb-nV-m3f" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aNf-HX-Mif" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="345.5" y="-98"/>
+        </scene>
         <!--Background Animation View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -51,11 +59,18 @@
                             <constraint firstItem="32I-zm-XDi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="JuR-HK-vJm"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="YI6-Zh-KAq"/>
+                    <navigationItem key="navigationItem" id="YI6-Zh-KAq">
+                        <barButtonItem key="rightBarButtonItem" title="Log Out" id="9F2-jI-qmF">
+                            <connections>
+                                <action selector="logOut:" destination="BYZ-38-t0r" id="viY-4z-3pb"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="imageView" destination="16g-Ya-p0C" id="th5-L8-dcF"/>
                         <outlet property="kolodaView" destination="32I-zm-XDi" id="QB3-Nj-tjg"/>
+                        <segue destination="fEb-nV-m3f" kind="presentation" identifier="loginpage" id="28w-wD-wPr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -77,14 +92,6 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cKi-vK-cJw">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bJ1-ZI-nEr">
-                                        <rect key="frame" x="0.0" y="585" width="600" height="128"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="128" id="0xt-0G-aao"/>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="128" id="Mvb-T5-XxT"/>
-                                        </constraints>
-                                    </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v5S-4V-jao" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="713"/>
                                         <subviews>
@@ -334,10 +341,7 @@
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="bJ1-ZI-nEr" secondAttribute="trailing" id="3aI-Bu-v4F"/>
                                     <constraint firstItem="v5S-4V-jao" firstAttribute="leading" secondItem="cKi-vK-cJw" secondAttribute="leading" id="7Kd-Wt-tvE"/>
-                                    <constraint firstAttribute="bottom" secondItem="bJ1-ZI-nEr" secondAttribute="bottom" id="AsS-CT-ezg"/>
-                                    <constraint firstItem="bJ1-ZI-nEr" firstAttribute="leading" secondItem="cKi-vK-cJw" secondAttribute="leading" id="DHr-74-yIc"/>
                                     <constraint firstAttribute="trailing" secondItem="v5S-4V-jao" secondAttribute="trailing" id="EUv-UW-Qms"/>
                                     <constraint firstItem="v5S-4V-jao" firstAttribute="width" secondItem="cKi-vK-cJw" secondAttribute="width" id="L7G-69-VQF"/>
                                     <constraint firstItem="v5S-4V-jao" firstAttribute="height" secondItem="cKi-vK-cJw" secondAttribute="height" id="dY1-Jf-jeN"/>
@@ -372,7 +376,6 @@
                     <size key="freeformSize" width="600" height="1000"/>
                     <connections>
                         <outlet property="imageView" destination="8hk-xb-Z8g" id="Pxs-FZ-hXM"/>
-                        <outlet property="theBottomBlurredView" destination="bJ1-ZI-nEr" id="q29-1L-KYd"/>
                         <outlet property="theCustomQuestionButton" destination="Hdx-yn-KHS" id="dSt-aw-zM1"/>
                         <outlet property="theFirstBulletText" destination="GZp-kG-YwR" id="1K2-x8-oMM"/>
                         <outlet property="theProfileImageButtonOverlay" destination="g5O-C2-7n0" id="K7c-5M-A8C"/>
